--- a/.github/workflows/remind_pull_request.yml
+++ b/.github/workflows/remind_pull_request.yml
@@ -18,3 +18,7 @@ jobs:
 
       - name: Run a raketask
         run: rake remind_pull_request
+        env:
+          GITHUB_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          PR_LABEL: ${{ secrets.PR_LABEL }}
